--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -311,7 +311,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <string>SWORD ATTACK</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="GunAttack">
       <property name="geometry">
        <rect>
         <x>280</x>
@@ -324,7 +324,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <string>GUN ATTACK</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_3">
+     <widget class="QPushButton" name="RepairWeapons">
       <property name="geometry">
        <rect>
         <x>680</x>
@@ -337,7 +337,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <string>REPAIR WEAPONS</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_4">
+     <widget class="QPushButton" name="Guard">
       <property name="geometry">
        <rect>
         <x>680</x>
@@ -382,7 +382,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <string/>
       </property>
      </widget>
-     <widget class="QLabel" name="SwordsLeft">
+     <widget class="QLabel" name="SwordStatus">
       <property name="geometry">
        <rect>
         <x>530</x>
@@ -400,13 +400,13 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <string notr="true">background-color: rgb(255, 255, 255)</string>
       </property>
       <property name="text">
-       <string>4 / 4</string>
+       <string/>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
      </widget>
-     <widget class="QLabel" name="SwordsLeft_2">
+     <widget class="QLabel" name="GunStatus">
       <property name="geometry">
        <rect>
         <x>530</x>
@@ -424,7 +424,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
        <string notr="true">background-color: rgb(255, 255, 255)</string>
       </property>
       <property name="text">
-       <string>4 / 4</string>
+       <string/>
       </property>
       <property name="alignment">
        <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -435,12 +435,239 @@ li.checked::marker { content: &quot;\2612&quot;; }
      <zorder>Player</zorder>
      <zorder>Enemy</zorder>
      <zorder>SwordAttack</zorder>
-     <zorder>pushButton_2</zorder>
-     <zorder>pushButton_3</zorder>
-     <zorder>pushButton_4</zorder>
+     <zorder>GunAttack</zorder>
+     <zorder>RepairWeapons</zorder>
+     <zorder>Guard</zorder>
      <zorder>PlayerIcon</zorder>
-     <zorder>SwordsLeft</zorder>
-     <zorder>SwordsLeft_2</zorder>
+     <zorder>SwordStatus</zorder>
+     <zorder>GunStatus</zorder>
+    </widget>
+    <widget class="QWidget" name="page_4">
+     <widget class="QLabel" name="Player_2">
+      <property name="geometry">
+       <rect>
+        <x>170</x>
+        <y>190</y>
+        <width>91</width>
+        <height>171</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color:rgb(255, 255, 255)</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::TextFormat::RichText</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="Enemy_2">
+      <property name="geometry">
+       <rect>
+        <x>960</x>
+        <y>190</y>
+        <width>91</width>
+        <height>171</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color:rgb(255, 255, 255)</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::TextFormat::RichText</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="Background4">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>-70</y>
+        <width>1201</width>
+        <height>721</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color:rgb(204, 65, 0)</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::TextFormat::RichText</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="CardBoard">
+      <property name="geometry">
+       <rect>
+        <x>350</x>
+        <y>40</y>
+        <width>521</width>
+        <height>581</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(170, 85, 0);</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QLabel" name="Card">
+      <property name="geometry">
+       <rect>
+        <x>500</x>
+        <y>140</y>
+        <width>211</width>
+        <height>271</height>
+       </rect>
+      </property>
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::Shape::NoFrame</enum>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap resource="Resources.qrc">:/Images/Cards/Club-10.png</pixmap>
+      </property>
+      <property name="scaledContents">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="TotalPointsLabel">
+      <property name="geometry">
+       <rect>
+        <x>510</x>
+        <y>440</y>
+        <width>151</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>TOTAL POINTS: </string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="Action">
+      <property name="geometry">
+       <rect>
+        <x>350</x>
+        <y>40</y>
+        <width>171</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>ACTION</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignmentFlag::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="DrawnCardNumber">
+      <property name="geometry">
+       <rect>
+        <x>700</x>
+        <y>40</y>
+        <width>171</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>CARD 1</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignmentFlag::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="TotalPointsValue">
+      <property name="geometry">
+       <rect>
+        <x>680</x>
+        <y>440</y>
+        <width>61</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>0</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="DrawMore">
+      <property name="geometry">
+       <rect>
+        <x>370</x>
+        <y>530</y>
+        <width>131</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>DRAW MORE</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="Stop">
+      <property name="geometry">
+       <rect>
+        <x>720</x>
+        <y>530</y>
+        <width>131</width>
+        <height>71</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>STOP</string>
+      </property>
+     </widget>
+     <zorder>Background4</zorder>
+     <zorder>Enemy_2</zorder>
+     <zorder>Player_2</zorder>
+     <zorder>CardBoard</zorder>
+     <zorder>TotalPointsLabel</zorder>
+     <zorder>Action</zorder>
+     <zorder>DrawnCardNumber</zorder>
+     <zorder>TotalPointsValue</zorder>
+     <zorder>DrawMore</zorder>
+     <zorder>Stop</zorder>
+     <zorder>Card</zorder>
     </widget>
    </widget>
   </widget>
@@ -456,6 +683,8 @@ li.checked::marker { content: &quot;\2612&quot;; }
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="Resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
